	- Fix bootloaders - make compatible with smaller USB AVRS (USB_IsConnected)
	- Document new device class drivers
	- Made new host class drivers
	- Document new host class drivers
	- Convert Host mode demos to class drivers
	- Convert Host mode demos to schedulerless
	- Add standardized descriptor names to class driver structures, controlled by USE_NONSTANDARD_DESCRIPTOR_NAMES
	- Device demos error if endpoint config fail
============================

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLogXXXXXX Version XXXXXX
  *
  *  - Removed psuedo-scheduler, dynamic memory block allocator from the library (no longer needed and not used respectively)
  *  - Added new class drivers and matching demos to the library for rapid application development
  *  - Added incomplete device and host mode demos for later enhancement
  *  - Changed bootloaders to use FLASHEND rather than the existence of RAMPZ to determine if far FLASH pointers are needed
  *
  *
  *  \section Sec_ChangeLog090605 Version 090605
  *
  *  - Fixed bug in RNDISEthernet and DualCDC demos not using the correct USB_ControlRequest structure for control request data
  *  - Fixed documentation showing incorrect USB mode support on the supported AVRs list
  *  - Fixed RNDISEthernet not working under Linux due to Linux requiring an "optional" RNDIS request which was unhandled
  *  - Fixed Mouse and Keyboard device demos not acting in accordance with the HID specification for idle periods (thanks to Brian Dickman)
  *  - Removed support for endpoint/pipe non-control interrupts; these did not act in the way users expected, and had many subtle issues
  *  - Fixed Device Mode not handling Set Feature and Clear Feature Chapter 9 requests that are addressed to the device (thanks to Brian Dickman)
  *  - Moved control endpoint interrupt handling into the library itself, enable via the new INTERRUPT_CONTROL_ENDPOINT token